fixed ai and machine learning projects cards spacing issue, wrong divs, also changed media for screen under 2070px to better align with text under projects with longer descriptions

--- a/style.css
+++ b/style.css
@@ -578,6 +578,18 @@ body {
   font-weight: 500;
 }
 
+@media screen and (max-width: 2070px) {
+ 
+
+  .category__projects {
+    flex-wrap: wrap;
+  }
+
+  .project-card {
+    width: 48%;
+  }
+}
+
 @media screen and (max-width: 1230px) {
   .hero__image {
     width: 100%;
